--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-    "name": "student-management",
-    "version": "0.0.1",
-    "author": "Phong-Thai-Thuc",
-    "contributors": [
-        "Nguyen Thanh Phong <1642050@student.hcmus.edu.vn>",
-        "Nguyen Quoc Thai <1642063@student.hcmus.edu.vn>",
-        "Huynh Duy Thuc <1642076@student.hcmus.edu.vn>"
-    ],
-    "devDependencies": {
-        "bower": "^1.3.9",
-        "gulp": "~3.9.0",
-        "gulp-concat": "^2.4.1",
-        "gulp-connect": "^2.0.6",
-        "gulp-cssnano": "^2.1.0",
-        "gulp-htmlmin": "^1.3.0",
-        "gulp-less": "^3.0.5",
-        "gulp-rename": "^1.2.0",
-        "gulp-uglify": "^1.0.1",
-        "gulp-usemin": "^0.3.7",
-        "gulp-watch": "^4.3.5",
-        "gulp-wrap": "^0.11.0"
-    }
+  "name": "student-management",
+  "version": "0.0.1",
+  "author": "Phong-Thai-Thuc",
+  "contributors": [
+    "Nguyen Thanh Phong <1642050@student.hcmus.edu.vn>",
+    "Nguyen Quoc Thai <1642063@student.hcmus.edu.vn>",
+    "Huynh Duy Thuc <1642076@student.hcmus.edu.vn>"
+  ],
+  "scripts": {
+    "dev-server": "./node_modules/.bin/babel-node --presets babel-preset-es2015 ./src/server/app.js",
+    "dev-client": "gulp",
+    "dev": "concurrently --kill-others \"npm run dev-client\" \"npm run dev-server\""
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "bower": "^1.3.9",
+    "concurrently": "^3.4.0",
+    "gulp": "~3.9.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-connect": "^2.0.6",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-less": "^3.0.5",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-usemin": "^0.3.7",
+    "gulp-watch": "^4.3.5",
+    "gulp-wrap": "^0.11.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2"
+  }
 }
