--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-htmlmin": "^1.3.0",
     "gulp-less": "^3.0.5",
     "gulp-rename": "^1.2.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^1.0.1",
     "gulp-usemin": "^0.3.7",
     "gulp-watch": "^4.3.5",
