--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "gulp-wrap": "^0.11.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mysql": "^2.13.0",
+    "sequelize": "^3.30.4"
   }
 }
