--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
+    "latest-version": "^3.1.0",
     "mysql": "^2.13.0",
-    "sequelize": "^3.30.4",
-    "latest-version": "^3.1.0"
+    "sequelize": "^3.30.4"
   }
 }
