--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "dev-client": "gulp",
     "dev": "concurrently --kill-others \"npm run dev-client\" \"npm run dev-server\""
   },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "sourceMaps": true,
+    "retainLines": true
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "bower": "^1.3.9",
     "concurrently": "^3.4.0",
     "gulp": "~3.9.0",
