--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-ui-router": "^0.2.15",
     "bootstrap": "~3.3.6",
     "font-awesome": "~4.7.0",
-    "angular-ui-grid": "^4.0.4"
+    "angular-ui-grid": "^4.0.4",
+    "jquery-ui": "^1.12.1"
   },
   "repository": {
     "type": "git",
