--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "bootstrap": "~3.3.6",
     "font-awesome": "~4.7.0",
     "angular-ui-grid": "^4.0.4",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "angularjs-slider": "^6.1.2"
   },
   "repository": {
     "type": "git",
